# trade

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  pyproject.toml  trade_cli.cpp  vcpkg.json
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-01.md
_bmad-output/planning-artifacts/: continuation-plan-phase11-plus.md  project-evolution-plan.md  restructure-plan.md  ui-and-data-plan.md
cmake/: deps.cmake  submodule_check.cmake  tests.cmake  trade_cli_sources.cmake  trade_core_sources.cmake
config/: README.md  config.yaml
config/modules/: data_ingestion.yaml  provider_eastmoney.yaml  sentiment.yaml  storage_baidu.yaml  storage_google_drive.yaml
docs/: existing-documentation-inventory.md  project-parts.json  project-scan-report.json  project-structure.md  user-provided-context.md
include/trade/app/pipelines/: download_pipeline.h  sentiment_pipeline.h
include/trade/cli/: args.h  commands.h  shared.h
include/trade/collector/: collector.h
include/trade/common/: config.h
include/trade/features/: fund_flow.h  preprocessor.h  price_limit.h
include/trade/model/: bar.h  instrument.h
include/trade/normalizer/: bar_normalizer.h
include/trade/provider/: eastmoney_fundamental.h  eastmoney_provider.h  http_client.h  i_data_provider.h  provider_factory.h
include/trade/sentiment/: jin10_source.h  onnx_sentiment.h  rss_source.h  rule_sentiment.h  sentiment_factor.h  sentiment_model.h  symbol_linker.h  text_cleaner.h  text_source.h  xueqiu_source.h
include/trade/stats/: attribution.h
include/trade/storage/: baidu_netdisk_client.h  data_compactor.h  duck_store.h  metadata_store.h  parquet_reader.h  parquet_writer.h  remote_sync.h  storage_path.h
notebooks/: 01_market_overview.ipynb  02_sentiment.ipynb  03_knowledge_graph.ipynb  04_model_training.ipynb
python/app/: ui.py
python/app/tabs/: tab_analysis.py  tab_brief.py  tab_settings.py  tab_signals.py
python/bindings/: bind_backtest.cpp  bind_decision.cpp  bind_features.cpp  bind_ml.cpp  bind_model.cpp  bind_regime.cpp  bind_risk.cpp  bind_sentiment.cpp  module.cpp
python/scripts/: build_graph.py  morning_brief.py  query_graph.py  run_collector.py  run_cross_asset.py  run_model.py  run_sentiment.py  run_window_score.py  scheduler.py
python/trade_py/: claude_client.py  feature_builder.py  fund_flow_fetcher.py  fundamental_fetcher.py  model_trainer.py  notebook_helpers.py  rss_fetcher.py  sentiment_pipeline.py  viz.py
python/trade_py/analysis/: feature_builder.py
python/trade_py/db/: settings_db.py
python/trade_py/intelligence/: sentiment_pipeline.py
python/trade_py/journal/: morning_brief.py
python/trade_py/signals/: window_scorer.py
src/app/pipelines/: download_pipeline.cpp  sentiment_pipeline.cpp  train_pipeline.cpp
src/cli/: args.cpp  commands_account.cpp  commands_analysis.cpp  commands_data.cpp  commands_sentiment.cpp  main.cpp  shared.cpp
src/collector/: collector.cpp
src/common/: config.cpp
src/features/: feature_engine.cpp  fund_flow.cpp  interaction.cpp  preprocessor.cpp  technical_signals.cpp
src/ml/: lgbm_model.cpp
src/normalizer/: bar_normalizer.cpp
src/provider/: akshare_provider.cpp  eastmoney_fundamental.cpp  eastmoney_provider.cpp  http_client.cpp  provider_factory.cpp
src/sentiment/: jin10_source.cpp  onnx_sentiment.cpp  rss_source.cpp  rule_sentiment.cpp  sentiment_factor.cpp  symbol_linker.cpp  text_cleaner.cpp  xueqiu_source.cpp
src/stats/: attribution.cpp
src/storage/: baidu_netdisk_client.cpp  data_compactor.cpp  duck_store.cpp  metadata_store.cpp  parquet_reader.cpp  parquet_writer.cpp  remote_sync.cpp  storage_path.cpp
tests/unit/: test_bar.cpp  test_metadata.cpp  test_ml.cpp  test_parquet.cpp  test_sentiment.cpp
tools/: trade_cli.cpp
