[project]
name = "trade-py"
version = "0.1.0"
description = "Quantitative trading decision support system"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
]
nlp = [
    "torch",
    "transformers",
    "onnx",
    "onnxruntime",
]
