[project]
name = "trade-py"
version = "0.1.0"
description = "Quantitative trading decision support system"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
    "matplotlib",
    "anthropic>=0.40.0",
    "feedparser>=6.0",
    "pandas>=2.0",
    "duckdb>=1.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
    "nbformat",
]
nlp = [
    "torch",
    "transformers",
    "onnx",
    "onnxruntime",
]
